@@ -7,10 +7,9 @@
     <artifactId>nobu</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <compiler-plugin.version>3.10.1</compiler-plugin.version>
-        <!--<maven.compiler.release>19</maven.compiler.release>-->
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <compiler-plugin.version>3.11.0</compiler-plugin.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
@@ -28,6 +27,13 @@
                 <groupId>${quarkus.platform.group-id}</groupId>
                 <artifactId>${quarkus.platform.artifact-id}</artifactId>
                 <version>${quarkus.platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.projectnessie.cel</groupId>
+                <artifactId>cel-bom</artifactId>
+                <version>0.3.12</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -77,12 +83,20 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectnessie.cel</groupId>
+            <artifactId>cel-tools</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectnessie.cel</groupId>
+            <artifactId>cel-jackson</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang.version}</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -116,11 +130,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${compiler-plugin.version}</version>
                 <configuration>
-                    <compilerArgs>
+                    <!--<compilerArgs>
                         <arg>-parameters</arg>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                        <arg>&#45;&#45;add-modules=jdk.incubator.concurrent</arg>
+                        <arg>&#45;&#45;enable-preview</arg>
+                    </compilerArgs>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -131,7 +145,7 @@
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
                     </systemPropertyVariables>
-                    <argLine>--enable-preview</argLine>
+                    <!--<argLine>&#45;&#45;enable-preview</argLine>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -158,8 +172,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
         </plugins>
